# general-cuda-kernel

./: readme.md
activation/: GLU.py  swiGlU.py
attention/: batch_norm.py  benchmark.py  cross_attention.py  flashattention.py  layer_norm.py  mha.py  mhawithkvcache.py  self_attention.py
benchmark/: gemm_bechmark.cpp  gemm_benchmark.py  maxpool2d_benchmark.cpp  mempool_benchmark.cpp  setup.py
buffer/: cudabuffer.h
gemm_op.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gpumemoryallocator/: mempool.cpp
include/: gemm_op.hpp
operators/: CMakeLists.txt  gemm.cu  gemm_op.cpp  gemv_op.cpp  int8_gemv.cu  maxpool2d.cu
operators /: conv2d.cu  ffn.cu  gemm.cu  gemv.cu
operators.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pretrain/: config.yaml  my_decoder_only_model.py  rope.py
runs/Apr16_00-08-45_MacBook-Pro-3.local/: events.out.tfevents.1744733325.MacBook-Pro-3.local.78740.0
runs/Apr16_00-10-13_MacBook-Pro-3.local/: events.out.tfevents.1744733413.MacBook-Pro-3.local.79714.0
tensor/: tensor.hpp
